--- a/i18n/locales/ru.json
+++ b/i18n/locales/ru.json
@@ -29,8 +29,14 @@
     "description": "Поиск и навигация с помощью клавиатурных команд",
     "placeholder": "Поиск по документации...",
     "empty": "Начните ввод для поиска...",
+    "noResults": "Ничего не найдено",
     "navigate": "для навигации",
-    "select": "для выбора"
+    "select": "для выбора",
+    "categories": {
+      "docs": "Документация",
+      "articles": "Статьи",
+      "projects": "Проекты"
+    }
   },
   "layout": {
     "search": "Поиск...",
