--- a/i18n/locales/en.json
+++ b/i18n/locales/en.json
@@ -95,6 +95,13 @@
       "lastCommit": "Last Commit"
     }
   },
+  "cookieBanner": {
+    "ariaLabel": "Cookie consent notice",
+    "title": "Cookie notice",
+    "description": "Visit data is collected for analytics.",
+    "accept": "Accept",
+    "decline": "Decline"
+  },
   "footer": {
     "sections": {
       "docs": "Docs",
