--- a/i18n/locales/ru.json
+++ b/i18n/locales/ru.json
@@ -83,8 +83,30 @@
     "repository": "Репозиторий на GitHub",
     "repositoryHint": "Исходный код этого портфолио."
   },
+  "archive": {
+    "title": "Скачать архив",
+    "download": "Скачать ZIP",
+    "preparing": "Подготовка...",
+    "filesCount": "Файлов",
+    "error": "Не удалось собрать архив.",
+    "safety": {
+      "aria": "Почему это безопасно",
+      "description": "Архив формируется локально в браузере из файлов этого репозитория, ничего не исполняется на вашем устройстве.",
+      "link": "Посмотреть реализацию"
+    }
+  },
+  "guides": {
+    "nav": {
+      "architecture": "Архитектура"
+    }
+  },
   "tools": {
-    "dateCalculator": {
+    "empty": "Пока нет инструментов.",
+    "nav": {
+      "calculators": "Калькуляторы"
+    },
+    "calculators": {
+      "empty": "Пока нет калькуляторов.",
       "aria": {
         "selectDate": "Выбрать дату"
       },
@@ -126,6 +148,7 @@
       }
     },
     "sourceCode": {
+      "download": "Скачать",
       "copy": "Копировать",
       "copied": "Скопировано",
       "expand": "Показать целиком",
